[package]
name = "codegen-holey-bytes"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
xlang.path         = "../xlang"
xlang_struct.path  = "../xlang/xlang_struct"
xlang_backend.path = "../xlang/xlang_backend"
target-tuples      =  "0.5.5"

[dependencies.arch-ops]
path     = "../lc-binutils/arch-ops"
version  = "0.1.0"
features = ["holey-bytes"]

[dependencies.binfmt]
path     = "../lc-binutils/binfmt"
version  = "0.1.0"
features = ["all-formats", "holey-bytes"]

[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.codegen_holey_bytes]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"
